# rustler

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSPIRATION.md  README.md  ROADMAP.md  default.nix  flake.nix
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: auto-merge.yml  ci.yml  claude-code-review.yml  copilot-setup-steps.yml  labeler.yml  nix.yml  playtest-runner.yml  playtest.yml  release.yml  tag-and-release.yml  test.yml
agents/: agent-engineer.md  build-engineer.md  developer-diary.md  game-designer.md  gameplay-engineer.md  performance-engineer.md  release-manager.md  software-architect.md
resources/: flashlight.wgsl  grass.wgsl  particles.wgsl  postprocess.wgsl  trail.wgsl
scripts/: ci-deps.sh  playtest.sh  record-gameplay.sh
src/: arenas.rs  audio_mix.rs  beat.rs  boss_catch.rs  bot.rs  catch_bank.rs  catch_deliver.rs  catch_effects.rs  catch_logic.rs  chain.rs  chain_mechanics.rs  chain_steal.rs  constants.rs  controls.rs  crab_boss_update.rs  crab_catching.rs  crab_render.rs  crab_update.rs  enemies.rs  event_handler.rs  floating_text.rs  game_lifecycle.rs  game_render.rs  game_render_backdrop.rs  game_render_hud.rs  game_update.rs  graphics.rs  hud_cache.rs  king_crab_audio.rs  levels.rs  main.rs  matchup_fx.rs  menu.rs  menu_intro.rs  npc_conga_train.rs  npc_scenarios.rs  npc_trains.rs  npc_trains_render.rs  overlays.rs  player_tools.rs  (+16 more)
src/graphics/: auras.rs  crab_draw.rs  crab_style.rs  delivery.rs  hud_indicators.rs  lasso.rs  map_hud.rs  mod.rs  particles.rs  player_render.rs  rings.rs  terrain.rs  tool_matches.rs  weather.rs
src/sounds/: audio.rs  mod.rs  music.rs
