[package]
name = "rustler"
version = "0.17.0"
edition = "2024"

[dependencies]
crevice = "0.13.0"
ggez = "0.9.3"
lewton = "0.10"
rand = "0.9.1"

[[bin]]
name = "rustler"
path = "src/main.rs"

[package.metadata.ggez]
resources = ["resources"]

[patch.crates-io]
winit = { path = "vendor/winit-0.28.7" }

# CI builds and runs cargo build/test/playtest on the dev profile every push.
# Debug info isn't used by the bot playtests or `cargo test` assertions, only
# by interactive debuggers, so dropping it cuts compile+link time and shrinks
# the cached `target/` dir without changing what's verified. `profile.test`
# inherits unset fields from `profile.dev`, so this covers `cargo test` too.
[profile.dev]
debug = 0
