[package]
name = "rustler"
version = "0.30.6"
edition = "2024"

[dependencies]
crevice = "0.13.0"
ggez = "0.9.3"
lewton = "0.10"
rand = "0.9.1"

[[bin]]
name = "rustler"
path = "src/main.rs"

[package.metadata.ggez]
resources = ["resources"]

[patch.crates-io]
winit = { path = "vendor/winit-0.28.7" }

# CI/local dev builds don't need debug symbols (no debugger attached in CI, and
# playtests/tests only check exit codes and stdout). Skipping debuginfo cuts
# build+link time substantially (~40% on an incremental rebuild with a real
# feature-sized diff) since dev and test both use this profile by default.
[profile.dev]
debug = 0
