[package]
name = "rustler"
version = "0.39.1"
edition = "2024"

[dependencies]
crevice = { version = "0.19", features = ["glam"] }
ggez = "0.10.0"
lewton = "0.10"
rand = "0.9.1"

[[bin]]
name = "rustler"
path = "src/main.rs"

[package.metadata.ggez]
resources = ["resources"]

# CI/local dev builds don't need debug symbols (no debugger attached in CI, and
# playtests/tests only check exit codes and stdout). Skipping debuginfo cuts
# build+link time substantially (~40% on an incremental rebuild with a real
# feature-sized diff) since dev and test both use this profile by default.
[profile.dev]
debug = 0
